# ribbit

./: README.md
backend/: Cargo.toml  docker-compose.yml  nginx.conf  signup.html
backend/certs/: localhost.crt  localhost.key
backend/conf.d/: default.conf
backend/db/: redka.db  redka.db-shm  redka.db-wal
backend/src/: indexing.rs  insertdb.rs  main.rs  pow.rs  rest.rs  schemas.rs  search.rs  searchdb.rs  services.rs  templates.rs
backend/src/templates/: home.html  list.html  post.html  publish.html
backend/static/: spow-wasm_bg.js  styles.css  worker.js
backend/static/en/: index.html
backend/static/fr/: index.html
frontend/: sign_up.tsx
